infer/tests/codetoanalyze/cpp/errors/constructors/constructor_init.cpp
../../frontend/constructors/constructor_init.cpp